# otty

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PRD.md  README.md  clippy.toml  deny.toml  mac-pack.md  otty-v3-parity-p0.md  otty-v3-parity-p1.md  prd.md  refactor.md  rustfmt.toml  spec.md
alacritty_terminal/: Cargo.toml
alacritty_terminal/src/: event.rs  event_loop.rs  index.rs  lib.rs  selection.rs  vi_mode.rs
alacritty_terminal/src/grid/: mod.rs  resize.rs  row.rs  storage.rs
alacritty_terminal/src/term/: cell.rs  color.rs  mod.rs  search.rs
alacritty_terminal/src/tty/: mod.rs  unix.rs
alacritty_terminal/src/tty/windows/: blocking.rs  child.rs  conpty.rs  mod.rs
alacritty_terminal/tests/: ref.rs
egui_term/: Cargo.toml
egui_term/examples/full_screen/: Cargo.toml
egui_term/examples/full_screen/src/: app.rs
egui_term/src/: bindings.rs  lib.rs  otty_backend.rs  otty_bindings.rs  otty_theme.rs  otty_view.rs  view.rs
egui_term/src/backend/: mod.rs
otty/: CONVENTIONS.md  Cargo.toml
otty-escape/: Cargo.toml  README.md
otty-escape/doc/support_sequence/: control_code.md  esc.md
otty-escape/docs/: support_sequences.md
otty-escape/examples/: log_actions.rs
otty-escape/src/: actor.rs  attributes.rs  block.rs  charset.rs  clipboard.rs  color.rs  control.rs  csi.rs  cursor.rs  dcs.rs  esc.rs  hyperlink.rs  keyboard.rs  lib.rs  mode.rs  osc.rs  parser.rs  sync.rs  timeout.rs
otty-escape/src/csi/: color.rs  mod.rs  sgr.rs
otty-escape/src/dcs/: block.rs  mod.rs
otty-libterm/: Cargo.toml  README.md
otty-libterm/benches/: engine.rs
otty-libterm/examples/: file_reader.rs  simple.rs  tokio_runtime.rs  unix_shell.rs
otty-libterm/src/: builder.rs  error.rs  event_loop.rs  lib.rs  mode.rs  options.rs  runtime.rs  snapshot.rs  terminal.rs
otty-libterm/src/grid/: mod.rs  resize.rs  row.rs  storage.rs  tests.rs
otty-libterm/src/terminal/: actor.rs  builder.rs  cell.rs  channel.rs  index.rs  mod.rs  mode.rs  options.rs  size.rs  snapshot.rs  surface.rs  surface_actor.rs
otty-pty/: Cargo.toml  README.md
otty-pty/examples/: run_unix_shell.rs  ssh_shell.rs
otty-pty/src/: errors.rs  fake.rs  lib.rs  local.rs  session.rs  size.rs  ssh.rs  unix.rs
otty-pty/tests/: ssh_smoke.rs
otty-surface/: Cargo.toml  README.md
otty-surface/benches/: snapshot.rs
otty-surface/examples/: grid.rs  parse_and_render.rs  simple.rs  unix_shell.rs
otty-surface/src/: actor.rs  block.rs  block_text.rs  cell.rs  color.rs  controller.rs  cursor.rs  damage.rs  grid.rs  hyperlink.rs  index.rs  lib.rs  mode.rs  search.rs  selection.rs  snapshot.rs  state.rs  surface.rs
otty-surface/src/grid/: mod.rs  resize.rs  row.rs  storage.rs  tests.rs
otty-ui/terminal/: Cargo.toml  README.md
otty-ui/terminal/examples/: bindings.rs  blocks_overlay.rs  fonts.rs  full_screen.rs  split_view.rs  themes.rs
otty-ui/terminal/src/: bindings.rs  block_controls.rs  block_layout.rs  engine.rs  error.rs  font.rs  input.rs  lib.rs  render_runs.rs  settings.rs  shaped_text.rs  term.rs  theme.rs  view.rs
otty-ui/tree/: Cargo.toml  README.md  tests.md
otty-ui/tree/examples/: tree_view.rs
otty-ui/tree/src/: lib.rs  model.rs  view.rs
otty-v2/: Cargo.toml
otty-v2/src/: app.rs  guards.rs  icons.rs  main.rs  state.rs  subscription.rs  update.rs  view.rs
otty-v2/src/routers/: explorer.rs  mod.rs  quick_launch.rs  quick_launch_wizard.rs  runtime.rs  settings.rs  sidebar.rs  tabs.rs  terminal.rs  window.rs
otty-v2/src/ui/: CONVENTIONS.md
otty-v2/src/ui/components/: icon_button.rs  resize_grips.rs
otty-v2/src/ui/widgets/: action_bar.rs  mod.rs  quick_launches_context_menu.rs  quick_launches_error.rs  quick_launches_sidebar.rs  quick_launches_wizard.rs  (+8 more)
otty-v2/src/widgets/: mod.rs
otty-v3/: Cargo.toml
otty-v3/docs/: router.md
otty-v3/src/: app.rs  guards.rs  helpers.rs  icons.rs  layout.rs  main.rs  services.rs  state.rs  style.rs  subscription.rs  update.rs  view.rs
otty-v3/src/components/: mod.rs
otty-v3/src/domain/: mod.rs  quick_launch.rs
otty-v3/src/events/: chrome.rs  explorer.rs  mod.rs  quick_launch.rs  settings.rs  sidebar.rs  tabs.rs  terminal_workspace.rs  window.rs
otty-v3/src/routers/: chrome.rs  explorer.rs  mod.rs  quick_launch.rs  settings.rs  sidebar.rs  tabs.rs  terminal_workspace.rs  window.rs
otty-v3/src/widgets/: mod.rs
otty-vault/: Cargo.toml
otty-vault/examples/: simple.rs
otty-vault/migrations/: README.md
otty-vault/src/: crypto.rs  errors.rs  lib.rs  migrations.rs  model.rs  session.rs  settings.rs  sql_cipher_vault.rs  store.rs
otty-vte/: Cargo.toml  README.md
otty-vte/examples/: printable.rs
otty-vte/src/: actor.rs  csi.rs  enums.rs  lib.rs  parser.rs  transitions.rs  utf8.rs
otty/src/: action_bar.rs  app.rs  cli.rs  context_menu.rs  effects.rs  fonts.rs  guards.rs  helpers.rs  icons.rs  layout.rs  main.rs  main_window.rs  services.rs  shell_integrations.rs  sidebar.rs  state.rs  style.rs  subscription.rs  tab.rs  tab_bar.rs  tab_button.rs  theme.rs  update.rs  view.rs
otty/src/app/: config.rs  fonts.rs  mod.rs  state.rs  tabs.rs  terminal_state.rs
otty/src/component/: mod.rs  tab_button.rs
otty/src/components/: icon_button.rs  menu_item.rs  mod.rs  tab_button.rs
otty/src/domain/: quick_launch.rs
otty/src/events/: chrome.rs  explorer.rs  mod.rs  settings.rs  sidebar.rs  tabs.rs  terminal_workspace.rs
otty/src/features/: CONVENTIONS.md  mod.rs
otty/src/screen/: terminal.rs
otty/src/service/: mod.rs  shell_integrations.rs
otty/src/services/: mod.rs  registry.rs  shell.rs  terminal_sessions.rs
otty/src/ui/: CONVENTIONS.md  mod.rs
otty/src/widget/: mod.rs  tab.rs  tab_bar.rs
otty/src/widgets/: action_bar.rs  mod.rs  pane_context_menu.rs  tab.rs  tab_bar.rs
otty/tests/: widget_conventions_ast.rs
widgets/otty-iced/: Cargo.toml
widgets/otty-iced/examples/: bindings.rs  fonts.rs  full_screen.rs  split_view.rs  themes.rs
widgets/otty-iced/src/: actions.rs  bindings.rs  engine.rs  error.rs  font.rs  lib.rs  settings.rs  term.rs  theme.rs  view.rs
(+386 files in other folders)
