[workspace]
resolver = "3"
members = [
    "otty-escape",
    "otty-pty",
    "otty-surface",
    "otty-vte",
    "otty-libterm",
]

[workspace.package]
edition = "2024"
rust-version = "1.87.0"

[workspace.dependencies]
thiserror = "2.0.17"
bitflags = "2.10.0"
log = { version = "0.4.28" }
anyhow = "1.0.100"
mio = "^1.1"
cursor-icon = { version = "1.2.0", default-features = false }
