[workspace]
resolver = "3"
members = [
    "otty",
    "otty-v2",
    "otty-v3",
    "otty-escape",
    "otty-pty",
    "otty-surface",
    "otty-vte",
    "otty-libterm",
    "otty-ui/*",
]

[workspace.package]
edition = "2024"
rust-version = "1.87.0"

[workspace.dependencies]
iced = "0.14"
thiserror = "2.0.18"
bitflags = "2.11.0"
log = "0.4.29"
anyhow = "1.0.101"
mio = "^1.1.1"
cursor-icon = { version = "1.2.0", default-features = false }
nix = { version = "0.31.1", features = ["term", "fs"]}
signal-hook = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
