[package]
name = "alacritty_terminal"
version = "0.25.2-dev"
authors = ["Christian Duerr <contact@christianduerr.com>", "Joe Wilm <joe@jwilm.com>"]
license = "Apache-2.0"
description = "Library for writing terminal emulators"
readme = "../README.md"
homepage = "https://alacritty.org"
repository = "https://github.com/alacritty/alacritty"
edition.workspace = true
rust-version.workspace = true

[dependencies]
base64 = "0.22.0"
bitflags = "2.4.1"
home = "0.5.5"
libc = "0.2"
log = "0.4"
parking_lot = "0.12.0"
regex-automata = "0.4.3"
unicode-width = "0.2.0"
otty-vte = { path = "../otty-vte" }
otty-escape = { path = "../otty-escape" }
otty-pty = { path = "../otty-pty" }
otty-surface = { path = "../otty-surface" }
mio.workspace = true
serde = { version = "1", features = ["derive", "rc"], optional = true }

[dev-dependencies]
serde_json = "1.0.0"
