[package]
name = "otty-escape"
homepage = "https://otty.sh"
repository = "https://github.com/otty-shell/otty"
description = "Library for parsing raw bytes to UI frendly actions"
authors = ["Ilya Shvyryalkin <ilyashvy@gmail.com>"]
version = "0.1.0"
license = "Apache-2.0"
readme = "./README.md"
edition.workspace = true
rust-version.workspace = true

[dependencies]
bitflags.workspace = true
log.workspace = true
otty-vte = { path = "../otty-vte", version = "0.1.0" }
cursor-icon = { workspace = true }
