[package]
name = "otty-libterm"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
log.workspace = true
mio.workspace = true
bitflags.workspace = true
thiserror.workspace = true
otty-escape = { path = "../otty-escape" }
otty-pty = { path = "../otty-pty" }
cursor-icon = { version = "1.2.0", default-features = false }
unicode-width = "0.2.2"

[dev-dependencies]
anyhow.workspace = true
signal-hook = "0.3.18"
nix = { version = "0.30.1", features = ["term", "fs"] }
