[package]
name = "otty-libterm"
homepage = "https://otty.sh"
repository = "https://github.com/otty-shell/otty"
description = "Library that allow you creating the terminal emulator"
authors = ["Ilya Shvyryalkin <ilyashvy@gmail.com>"]
version = "0.1.0"
license = "Apache-2.0"
readme = "./README.md"
edition.workspace = true
rust-version.workspace = true

[dependencies]
log.workspace = true
mio.workspace = true
thiserror.workspace = true
otty-escape = { path = "../otty-escape" }
otty-pty = { path = "../otty-pty" }
otty-surface = { path = "../otty-surface" }
cursor-icon = { version = "1.2.0", default-features = false }
unicode-width = "0.2.2"

[dev-dependencies]
anyhow.workspace = true
signal-hook = "0.3.18"
nix = { version = "0.30.1", features = ["term", "fs"] }
