[package]
name = "otty-libterm"
homepage = "https://otty.sh"
repository = "https://github.com/otty-shell/otty"
description = "Library that allow you creating the terminal emulator"
authors = ["Ilya Shvyryalkin <ilyashvy@gmail.com>"]
version = "0.1.0"
license = "Apache-2.0"
readme = "./README.md"
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
log = { workspace = true }
mio = { workspace = true }
thiserror = { workspace = true }
otty-escape = { path = "../otty-escape", version = "0.1.0" }
otty-pty = { path = "../otty-pty", version = "0.1.0" }
otty-surface = { path = "../otty-surface", version = "0.1.0" }
cursor-icon = { version = "1.2.0", default-features = false }
unicode-width = "0.2.2"
flume = "0.11.0"

[dev-dependencies]
anyhow = { workspace = true }
signal-hook = { workspace = true }
nix = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
criterion = "0.5"

[[bench]]
name = "engine"
harness = false
