[package]
name = "otty-pty"
homepage = "https://otty.sh"
repository = "https://github.com/otty-shell/otty"
description = "Library for working with pty"
authors = ["Ilya Shvyryalkin <ilyashvy@gmail.com>"]
version = "0.1.0"
license = "Apache-2.0"
readme = "./README.md"
edition.workspace = true
rust-version.workspace = true

[dependencies]
portable-pty = "0.9.0"
ssh2 = "0.9.5"
anyhow = "1.0.100"
thiserror.workspace = true
