[package]
name = "otty-pty"
homepage = "https://otty.sh"
repository = "https://github.com/otty-shell/otty"
description = "Library for working with pty"
authors = ["Ilya Shvyryalkin <ilyashvy@gmail.com>"]
version = "0.1.0"
license = "Apache-2.0"
readme = "./README.md"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
mio.workspace = true
ssh2 = "0.9.5"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", features = ["term"]}
signal-hook = "0.3.18"
