[package]
name = "otty-surface"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
log.workspace = true
otty-escape = { path = "../otty-escape" }
cursor-icon = { version = "1.2.0", default-features = false }
anyhow.workspace = true
mio = { workspace = true, features = ["os-ext"] }
signal-hook = "0.3.18"
nix = { version = "0.30.1", features = ["term", "fs"] }

[dev-dependencies]
otty-pty = { path = "../otty-pty" }
