[package]
name = "otty-surface"
homepage = "https://otty.sh"
repository = "https://github.com/otty-shell/otty"
description = "Terminal surface (content) manager"
authors = ["Ilya Shvyryalkin <ilyashvy@gmail.com>"]
version = "0.1.0"
license = "Apache-2.0"
readme = "./README.md"
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
bitflags = { workspace = true }
log = { workspace = true }
otty-escape = { path = "../otty-escape", version = "0.1.0" }
cursor-icon = { workspace = true }
unicode-width = "0.2.2"