[package]
name = "otty-v3"
description = "OTTY terminal — widgets-first architecture"
version = "0.1.0-beta1"
authors = ["Ilya Shvyryalkin <ilyashvy@gmail.com>"]
homepage = "https://otty.sh"
repository = "https://github.com/otty-shell/otty"
readme = "../README.md"
edition = { workspace = true }
rust-version = { workspace = true }
license = "Apache-2.0"

[dependencies]
iced = { workspace = true, features = ["canvas", "lazy", "advanced", "svg", "image", "tokio"] }
otty-ui-term = { path = "../otty-ui/terminal", version = "0.1.0" }
otty-ui-tree = { path = "../otty-ui/tree", version = "0.1.0" }
otty-libterm = { path = "../otty-libterm", version = "0.1.0" }
log = { workspace = true }
image = { version = "0.25", default-features = false, features = ["png"] }
env_logger = "0.11"
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shell-words = "1.1.0"

[dev-dependencies]
syn = { version = "2.0", features = ["full", "parsing"] }
