[package]
name = "otty-vault"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }
license = "Apache-2.0"
description = "Vault foundation contract and domain model for OTTY."

[dependencies]
thiserror = { workspace = true }
uuid = { workspace = true }
secrecy = { workspace = true }
zeroize = { workspace = true }
