[package]
name = "otty"
description = "Your future terminal"
version = "0.1.0-beta1"
authors = ["Ilya Shvyryalkin <ilyashvy@gmail.com>"]
homepage = "https://otty.sh"
repository = "https://github.com/otty-shell/otty"
readme = "../README.md"
edition = { workspace = true }
rust-version = { workspace = true }
license = "Apache-2.0"

[dependencies]
iced = { version = "0.14", features = ["canvas", "lazy", "advanced", "svg", "image"] }
otty-ui-term = { path = "../otty-ui/terminal", version = "0.1.0" }
log = { workspace = true }
image = { version = "0.25", default-features = false, features = ["png"] }

[package.metadata.generate-rpm]
maintainer = "Ilya Shvyryalkin <ilyashvy@gmail.com>"

assets = [
    { source = "target/release/otty", dest = "/usr/bin/otty", mode = "755" },
    { source = "assets/packages/linux/otty.desktop", dest = "/usr/share/applications/otty.desktop", mode = "644" },
    { source = "assets/logo/logo-small.png", dest = "/usr/share/icons/hicolor/64x64/apps/otty.png", mode = "644" }
]

[package.metadata.deb]
maintainer = "Ilya Shvyryalkin <ilyashvy@gmail.com>"

assets = [
    { source = "target/release/otty", dest = "/usr/bin/otty", mode = "755" },
    { source = "../assets/packages/linux/otty.desktop", dest = "/usr/share/applications/otty.desktop", mode = "644" },
    { source = "../assets/logo/logo-small.png", dest = "/usr/share/icons/hicolor/64x64/apps/otty.png", mode = "644" }
]
