[package]
name = "otty-ui-term"
homepage = "https://otty.sh"
repository = "https://github.com/otty-shell/otty"
description = "Terminal emulator widget for iced ui fraemwork"
authors = ["Ilya Shvyryalkin <ilyashvy@gmail.com>"]
version = "0.1.0"
license = "Apache-2.0"
readme = "./README.md"
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
thiserror = { workspace = true }
iced = { version = "0.14", features = ["canvas", "lazy", "advanced"] }
iced_graphics = { version = "0.14", default-features = false }
iced_core = "0.14"
otty-libterm = { path = "../../otty-libterm", version = "0.1.0" }
tokio = { version = "1.47.1", features = ["full"] }
open = "5.3.2"
