[package]
name = "full_screen"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.33.0"
eframe = { version = "0.33.0", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the wgpu rendering backend. Alternative: "glow".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4.28"
egui_term = { path = "../../", features = ["backend-otty"]}
wgpu = { version = "27" }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"

[features]
default = ["eframe/wayland", "eframe/x11"]
x11 = ["eframe/x11"]
wayland = ["eframe/wayland"]
